--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <div class="header-content">
       <h1 class="header-content__title">Accelerate localization from code to delivery</h1>
-      <div class="header-content__description">A localization and translation management platform for agile teams.
+      <div class="header-content__description">A localization and translation <br> management platform for agile teams.
         Embrace
-        automation, workflow transparency,
+        automation, workflow <br> transparency,
         and fast project delivery.
       </div>
       <div class="header-content__actions">
