--- a/index.html
+++ b/index.html
@@ -68,6 +68,36 @@
     </div>
   </header>
 
+  <main class="main">
+
+    <section class="brands">
+      <div class="container">
+        <h2 class="brands__title">The preferred localization tool of 1500+ companies</h2>
+        <div class="brands__list">
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-1.svg" alt="brands">
+          </a>
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-2.svg" alt="brands">
+          </a>
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-3.svg" alt="brands">
+          </a>
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-4.svg" alt="brands">
+          </a>
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-5.svg" alt="brands">
+          </a>
+          <a class="brand-item" href="">
+            <img class="brand-item__logo" src="assets/img/brand-6.svg" alt="brands">
+          </a>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
   <script src="./assets/js/main.js"></script>
 
 </body>
