--- a/index.html
+++ b/index.html
@@ -49,26 +49,27 @@
         <button class="btn btn--accent btn--sm" type="button">Try it free</button>
       </div>
     </div>
+  </header>
 
-    <div class="header-content">
-      <h1 class="header-content__title">Accelerate localization from code to delivery</h1>
-      <div class="header-content__description">A localization and translation <br> management platform for agile teams.
+  <main class="main">
+
+    <div class="hero">
+      <h1 class="hero__title">Accelerate localization from code to delivery</h1>
+      <div class="hero__description">A localization and translation <br> management platform for agile teams.
         Embrace
         automation, workflow <br> transparency,
         and fast project delivery.
       </div>
-      <div class="header-content__actions">
+      <div class="hero__actions">
         <button class="btn btn--accent btn--md" type="button">Try it free</button>
         <button class="btn btn--light btn--md" type="button">Book a demo</button>
       </div>
-      <div class="header-content__notes">Try all features for 14 days · No credit card required</div>
-      <div class="header-content__picture">
-        <img class="header-content__image" src="assets/img/hero-img.png" alt="hero">
+      <div class="hero__notes">Try all features for 14 days &#183; No credit card required</div>
+      <div class="hero__picture">
+        <img class="hero__image" src="assets/img/hero-img.png" alt="hero">
       </div>
     </div>
-  </header>
 
-  <main class="main">
 
     <section class="brands">
       <div class="container">
