--- a/index.html
+++ b/index.html
@@ -159,6 +159,187 @@
       </div>
     </section>
 
+    <section class="facilities">
+      <div class="container">
+        <h2 class="facilities__title">What can you localize with Lokalise?</h2>
+        <div class="facilities__content">
+          <div class="facility-item">
+            <h3 class="facility-item__title">Web apps</h3>
+            <p class="facility-item__description">Any kind of web apps — backend, frontend, single page, blogs — you
+              name it.</p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-1.png" alt="web-apps">
+            </div>
+          </div>
+
+          <div class="facility-item">
+            <h3 class="facility-item__title">Mobile apps</h3>
+            <p class="facility-item__description">Upload any mobile platform language files. Embed <u>Lokalise iOS
+                SDK</u> or
+              <u>Lokalise Android SDK</u> if you prefer.
+            </p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-2.png" alt="mobile-apps">
+            </div>
+          </div>
+
+          <div class="facility-item">
+            <h3 class="facility-item__title">Games</h3>
+            <p class="facility-item__description">Our cloud rating is trusted by <br> many leading game developers
+              around
+              the world.</p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-3.png" alt="games">
+            </div>
+          </div>
+
+          <div class="facility-item">
+            <h3 class="facility-item__title">Documents</h3>
+            <p class="facility-item__description">Upload your DOCX and static HTML files.</p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-4.png" alt="documents">
+            </div>
+          </div>
+
+          <div class="facility-item">
+            <h3 class="facility-item__title">Marketing e-mails</h3>
+            <p class="facility-item__description">Integrate with Salesforce Marketing Cloud (coming soon) or translate
+              static e-mails.</p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-5.png" alt="marketing-emails">
+            </div>
+          </div>
+
+          <div class="facility-item">
+            <h3 class="facility-item__title">IoT</h3>
+            <p class="facility-item__description">We support most popular localization file formats.</p>
+            <div class="facility-item__picture">
+              <img class="facility-item__image" src="assets/img/facilities-6.png" alt="iot">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="boost">
+      <div class="container">
+        <h2 class="boost-header">Boost your localization team’s productivity tenfold</h2>
+        <div class="boost-items">
+
+          <div class="managers">
+            <h3 class="managers__title">Managers</h3>
+            <div class="managers__description">Update existing and launch new features and products while simultaneously
+              localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed
+              up expansion to other markets.
+            </div>
+            <div>
+              <a class="managers__link" href="">Learn more</a>
+            </div>
+            <div class="managers__image">
+              <img src="assets/img/boost-img-1.png" alt="managers">
+            </div>
+          </div>
+
+          <div class="developers">
+            <h3 class="developers__title">Developers</h3>
+            <div class="developers__description">Set up an integration with your code repository or your own custom SDK
+              via
+              Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll be
+              automatically imported to Lokalise for translation.
+            </div>
+            <div>
+              <a class="developers__link" href="">Learn more</a>
+            </div>
+            <div class="developers__image">
+              <img src="assets/img/boost-img-2.png" alt="developers">
+            </div>
+          </div>
+
+          <div class="translators">
+            <h3 class="translators__title">Translators</h3>
+            <div class="translators__description">Eliminate double-work and neverending revisions with visual context
+              (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT
+              tools, like autocomplete, inline machine translation, and translation memory.
+            </div>
+            <div>
+              <a class="translators__link" href="">Learn more</a>
+            </div>
+            <div class="translators__image">
+              <img src="assets/img/boost-img-3.png" alt="translators">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="review">
+      <div class="container">
+        <div class="review-author">
+          <div class="review-author__text">“Lokalise has turned a task we were dreading into an absolute pleasure.
+            Great
+            platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver,
+            and over-the-air updates are the icing on the cake.”
+          </div>
+          <div class="review-author__name">Edward Cooper, Chief Mobile Officer</div>
+          <img class="review-author__logo" src="assets/img/revolut.svg" alt="review-logo">
+          <div class="review-author__image">
+            <img class="review-author__photo" src="assets/img/photo.png" alt="review-photo">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="rating">
+      <div class="container">
+        <div class="rating-content">
+
+          <div class="rating-content__left">
+            <div class="rating-content__left-image">
+              <img class="rating-content__image" src="assets/img/cake.png" alt="cake">
+            </div>
+            <div class="rating-content__left-text">
+              The most-loved translation management software
+            </div>
+          </div>
+
+          <span class="rating-content__line"></span>
+
+          <div class="rating-content__right">
+            <div class="rating-content__right-company">
+              <img class="rating-content__logo-first" src="assets/img/g2.svg" alt="logo-first">
+            </div>
+            <div class="rating-content__right-company">
+              <img class="rating-content__logo-second" src="assets/img/capterra.svg" alt="logo-second">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="integration">
+      <div class="container">
+        <div class="integration-content">
+          <h2 class="integration-content__title">Integrate Lokalise with your work tools</h2>
+          <div class="integration-content__description">Automate processes, eliminate routine tasks, and track progress
+            with ease.</div>
+          <img class="integration-content__image" src="assets/img/integration-img.png" alt="integration">
+          <button class="btn btn--accent btn--lg" type="button">See all integrations</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="localization">
+      <div class="container">
+        <div class="localization-content">
+          <h2 class="localization-content__title">Localization made easy. Why wait?</h2>
+          <div class="localization-content__description">Try for free or let us show you how it works.</div>
+          <button class="btn btn--black btn--md" type="button">Try it free</button>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script src="./assets/js/main.js"></script>
