--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="navbar__link" href="">Pricing</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="">study studies</a>
+            <a class="navbar__link" href="">Case studies</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="">Resources</a>
@@ -134,7 +134,8 @@
             <h3 class="quality__title">Ensure quality</h3>
             <p class="quality__description">Use built-in tools — e.g. <u>translation memory</u>, machine translation,
               and <u>QA
-                checks</u> — to enhance the quality and cohesion of translations. Add product <u>screenshots</u> for
+                checks</u> — to enhance the quality and cohesion of translations. Add product <br> <u>screenshots</u>
+              for
               context and use
               the <u>in-context editors</u> for instant previews.</p>
             <div class="quality__btn"><a href="">Start now</a></div>
@@ -348,64 +349,80 @@
 
       <div class="study">
         <h3 class="study__title">Case Studies</h3>
-        <img class="study__image" src="assets/img/study-img.png" alt="study-img">
+        <div class="study__image">
+          <img class="study__picture" src="assets/img/study-img.png" alt="study-img">
+        </div>
         <img class="study__logo" src="assets/img/study-logo.svg" alt="study-logo">
         <div class="study__description">Riding towards global success with a 100% teammate enthusiasm</div>
         <a class="study__link" href="">Read more</a>
       </div>
 
-      <div class="footer-menu">
-
-        <div class="footer-menu__product">
-          <h4 class="footer-menu__product-title">Product</h4>
-          <div class="footer-menu__product-list">
-            <a class="footer-menu__product-link" href="">For developers</a>
-            <a class="footer-menu__product-link" href="">For managers</a>
-            <a class="footer-menu__product-link" href="">For translators</a>
-            <a class="footer-menu__product-link" href="">For designers</a>
-            <a class="footer-menu__product-link" href="">Integrations</a>
-            <a class="footer-menu__product-link" href="">Security</a>
-            <a class="footer-menu__product-link" href="">Pricing</a>
-            <a class="footer-menu__product-link" href="">Automations</a>
-          </div>
+      <div class="product">
+        <div class="product__title">Product</div>
+        <div class="product__list">
+          <a class="product__link" href="">For developers</a>
+          <a class="product__link" href="">For managers</a>
+          <a class="product__link" href="">For translators</a>
+          <a class="product__link" href="">For designers</a>
+          <a class="product__link" href="">Integrations</a>
+          <a class="product__link" href="">Security</a>
+          <a class="product__link" href="">Pricing</a>
+          <a class="product__link" href="">Automations</a>
         </div>
-        <div class="footer-menu__support">
-          <h4 class="footer-menu__support-title">Support</h4>
-          <div class="footer-menu__support-list">
-            <a class="footer-menu__support-link" href="">Contact</a>
-            <a class="footer-menu__support-link" href="">Documentation</a>
-            <a class="footer-menu__support-link" href="">Status</a>
-            <a class="footer-menu__support-link" href="">Product Updates</a>
-            <a class="footer-menu__support-link" href="">CLI Tool</a>
-            <a class="footer-menu__support-link" href="">API Reference</a>
-            <a class="footer-menu__support-link" href="">iOS and Android SDK</a>
-            <a class="footer-menu__support-link" href="">Supported File Formats</a>
-          </div>
-        </div>
-        <div class="footer-menu__company">
-          <h4 class="footer-menu__company-title">Company</h4>
-          <div class="footer-menu__company-list">
-            <a class="footer-menu__company-link" href="">About</a>
-            <a class="footer-menu__company-link" href="">Blog</a>
-            <a class="footer-menu__company-link" href="">Careers | We`re Hiring</a>
-            <a class="footer-menu__company-link" href="">Case Studies</a>
-            <a class="footer-menu__company-link" href="">Media Kit</a>
-          </div>
-        </div>
-        <div class="footer-menu__legal">
-          <h4 class="footer-menu__legal-title">Legal</h4>
-          <div class="footer-menu__legal-list">
-            <a class="footer-menu__legal-link" href="">Terms of Service</a>
-            <a class="footer-menu__legal-link" href="">Privacy Policy</a>
-            <a class="footer-menu__legal-link" href="">Cookie Policy</a>
-            <a class="footer-menu__legal-link" href="">Privacy Shield</a>
-            <a class="footer-menu__legal-link" href="">DPA</a>
-            <a class="footer-menu__legal-link" href="">List of Sub-processors</a>
-            <a class="footer-menu__legal-link" href="">Candidates Privacy Notice</a>
-          </div>
-        </div>
-
       </div>
+
+      <div class="support">
+        <div class="support__title">Support</div>
+        <div class="support__list">
+          <a class="support__link" href="">Contact</a>
+          <a class="support__link" href="">Documentation</a>
+          <a class="support__link" href="">Status</a>
+          <a class="support__link" href="">Product Updates</a>
+          <a class="support__link" href="">CLI Tool</a>
+          <a class="support__link" href="">API Reference</a>
+          <a class="support__link" href="">iOS and Android SDK</a>
+          <a class="support__link" href="">Supported File Formats</a>
+        </div>
+      </div>
+
+      <div class="company">
+        <div class="company__title">Company</div>
+        <div class="company__list">
+          <a class="company__link" href="">About</a>
+          <a class="company__link" href="">Blog</a>
+          <a class="company__link" href="">Careers | We`re Hiring</a>
+          <a class="company__link" href="">Case Studies</a>
+          <a class="company__link" href="">Media Kit</a>
+        </div>
+      </div>
+
+      <div class="legal">
+        <div class="legal__title">Legal</div>
+        <div class="legal__list">
+          <a class="legal__link" href="">Terms of Service</a>
+          <a class="legal__link" href="">Privacy Policy</a>
+          <a class="legal__link" href="">Cookie Policy</a>
+          <a class="legal__link" href="">Privacy Shield</a>
+          <a class="legal__link" href="">DPA</a>
+          <a class="legal__link" href="">List of Sub-processors</a>
+          <a class="legal__link" href="">Candidates Privacy <br> Notice</a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="container footer-bottom">
+      <div class="footer-bottom__content">
+        <img class="footer-bottom__logo" src="assets/img/bottom-logo.svg" alt="bottom-logo">
+        <div class="footer-bottom__description">Localization workflow for your web and mobile apps, games and digital
+          content.</div>
+      </div>
+      <div class="footer-bottom__copyrights">
+        <div class="footer-bottom__years">©2001-2020</div>
+        <div class="footer-bottom__rights">All rights reserved.</div>
+      </div>
+    </div>
+
 
   </footer>
 
