--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     </section>
 
     <section class="features">
+      <h2 class="visually-hidden">About features</h2>
       <div class="container">
 
         <article class="control">
@@ -275,6 +276,7 @@
     </section>
 
     <section class="review">
+      <h2 class="visually-hidden">About review</h2>
       <div class="container">
         <div class="review-author">
           <div class="review-author__text">“Lokalise has turned a task we were dreading into an absolute pleasure.
@@ -292,6 +294,7 @@
     </section>
 
     <section class="rating">
+      <h2 class="visually-hidden">About rating</h2>
       <div class="container">
         <div class="rating-content">
 
@@ -418,7 +421,7 @@
           content.</div>
       </div>
       <div class="footer-bottom__copyrights">
-        <div class="footer-bottom__years">©2001-2020</div>
+        <div class="footer-bottom__years">&#169;2001-2020</div>
         <div class="footer-bottom__rights">All rights reserved.</div>
       </div>
     </div>
