--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
       <h2 class="visually-hidden">About review</h2>
       <div class="container">
         <div class="review-author">
-          <div class="review-author__text">“Lokalise has turned a task we were dreading into an absolute pleasure.
+          <q class="review-author__text">Lokalise has turned a task we were dreading into an absolute pleasure.
             Great
             platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver,
-            and over-the-air updates are the icing on the cake.”
-          </div>
+            and over-the-air updates are the icing on the cake.
+          </q>
           <div class="review-author__name">Edward Cooper, Chief Mobile Officer</div>
           <img class="review-author__logo" src="assets/img/revolut.svg" alt="review-logo">
           <div class="review-author__image">
